# travelSiteProject

./: pyproject.toml  report.html  xmlreport.xml
pages/: index_page.py  index_page_locators.py  register_success_page.py  register_success_page_locators.py
resources/: constants.py
tests/: conftest.py  test_login.py
