[tool.poetry]
name = "travelsiteproject"
version = "0.1.0"
description = ""
authors = ["KAVITHA <105535081+kavithankl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
#python = "^3.9"
selenium = "^4.11.2"
pytest = "^7.4.0"
junit-xml = "^1.9"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
